# tcpe

./: .gitignore  Cargo.toml  temp
ebpf/: CMakeLists.txt  cgroups-clear.sh  cgroups-client-init.sh  cgroups-server-init.sh  client.c  client.sh  decoder.c  decoder.sh  definitions.h  encoder.c  encoder.sh  reader.c  reader.sh  server.c  server.sh  writer.c
ebpf/bpfdsr/: ipv4toi.py  reader.c  reader.sh
src/: base64_bytes.rs  client.rs  handoff.rs  lib.rs  load_balancer.rs  server.rs
