[package]
name = "mpdsr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
aya = { version = "0.13.1", default-features = false }
dashmap = "6.1.0"
eyre = "0.6.12"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["poll", "socket"] }
pnet = "0.35.0"
pnet_packet = "0.35.0"

