[package]
name = "mpdsr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "lb"
path = "src/load_balancer.rs"


[dependencies]
aya = { version = "0.13.1", default-features = false }
dashmap = "6.1.0"
eyre = "0.6.12"
serde_json = "1.0.140"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["poll", "socket"] }
oxhttp = "0.3.0"
pnet = "0.35.0"
pnet_packet = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
rand = "0.9.1"
bincode = "2.0.1"
bytecodec = "0.4.0"
httpcodec = "0.2.3"
bufstream = "0.1.4"

